--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/ingramwd/tech-blog/issues"
   },
-  "homepage": "https://github.com/ingramwd/tech-blog#readme"
+  "homepage": "https://github.com/ingramwd/tech-blog#readme",
+  "dependencies": {
+    "connect-session-sequelize": "^7.1.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.16.1"
+  }
 }
